--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "checkJs": false,
     "jsx": "react",
     "declaration": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
